--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hello</div>
+    <div class="wrapper">
+        <h1>Breath Code Photo feed</h1>
+        <header>HEADER</header>
+        <div class="secondWrapper">
+            <nav>NAV</nav>
+            <section>SECTION</section>
 </body>
 </html>
