--- a/index.html
+++ b/index.html
@@ -5,14 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Document</title>
+    <title>Instagram Feed</title>
 </head>
 <body>
-    <div class="wrapper">
-        <h1>Breath Code Photo feed</h1>
-        <header>HEADER</header>
+    <header>
         <div class="secondWrapper">
-            <nav>NAV</nav>
-            <section>SECTION</section>
+            <h1>Breathe Code Photo feed</h1>
+        </div>
+     </header>
+        <div class="secondWrapper">
+            <div class="box one">
+                <div><h2>My First photo</h2></div><div class="date"><span>12/14</span></div>
+            <div>
+                <img src="https://images.pexels.com/photos/1133082/pexels-photo-1133082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="black dog"></div>
+            <div><p>This is my first photo of the feed. This is a multi line comment for testing purpose. I am learning to code with <b>Breathcode</b> </p></div>
+            </div>
+            </div>
+        <div class="secondWrapper">
+            <div class="box two">
+                <div>
+                <h2>some cute thing</h2></div><div class="date"><span>12/17</span></div>
+                <div>
+                    <img src="https://images.pexels.com/photos/5732476/pexels-photo-5732476.jpeg?auto=compress&cs=tinysrgb&w=400" alt="cute dog">
+                </div>
+                <div><p>The internet approves this cute dog... <b>#BreatheCode</b></p></div>
+            </div>
+        </div>
+        <div class="secondWrapper">
+            <div class="box three">
+                    <div><h2>And of course...food!</h2></div><div class="date"><span>12/17</span></div>
+                <div>
+                    <img src="https://images.pexels.com/photos/2097090/pexels-photo-2097090.jpeg?auto=compress&cs=tinysrgb&w=400" alt="food">
+                </div>
+                <div><p>Because no photo feed is cool without some food on it. <b>#breatheCode</b></p></div>
+            </div>
+            </div>
+    
+    </div> 
 </body>
 </html>
